tests/golden/parser/accept/closure_typed_block.rua
fn main() {
    let increment = |value: i64| -> i64 {
        value + 1
    };
}
