tests/golden/parser/reject/incomplete_fn.rua
fn compute(value: i64) ->
